<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/pacman"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:alpha="0.9"
        android:contentDescription="@string/pacman_game_screen"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/pacman" />

    <ImageView
        android:id="@+id/pman"
        android:layout_width="52dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/pacman_image"
        app:layout_constraintBottom_toTopOf="@+id/pacman"
        app:layout_constraintEnd_toStartOf="@+id/pacman"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/pman" />

    <ImageView
        android:id="@+id/ghosts"
        android:layout_width="59dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/pacman_ghosts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pacman"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pacman"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ghost" />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/pman"
        app:layout_constraintTop_toBottomOf="@+id/pman">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffff00"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/pac_man"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="16sp"
            app:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/pacman_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="@string/_0"
            android:textColor="#ffff00"
            android:textSize="56sp"
            app:fontFamily="sans-serif-light" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="addTenForPacman"
            android:text="@string/pac_dot_10" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="addGhostPoints"
            android:text="@string/ghosts_200" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="addCherryPoints"
            android:text="@string/cherry_100" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5"
        app:layout_goneMarginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ff0000"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/ghosts"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/ghosts_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="@string/_0"
            android:textColor="#ff0000"
            android:textSize="56sp"
            app:fontFamily="sans-serif-light" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="addFirstHit"
            android:text="@string/_1_life_100" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="addSecondHit"
            android:text="@string/_2_lives_200" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="addThirdHit"
            android:text="@string/no_lives_left" />

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:onClick="reset"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="@+id/pacman"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>